<resources>
    <string name="app_name">Aamku connect</string>
    <string name="title_activity_dashboard">Aamku connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aamku connect</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">LOG OUT</string>
    <string name="action_notif">Notification</string>


    //Admin
    <string name="menu_home">Add Users</string>
    <string name="menu_all">All Users</string>
    <string name="menu_pending">Retailers Requests</string>

    //Retailers string
    <string name="menu_all_retailers">All Retailers</string>
    <string name="menu_add_retailers">Add Retailers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
