<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_group_add_blue_grey_500_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_list_blue_grey_500_24dp"
            android:title="@string/menu_all" />

        <item
            android:id="@+id/nav_admin_retailers"
            android:icon="@drawable/ic_list_blue_grey_500_24dp"
            android:title="All retailers" />

        <item
            android:id="@+id/nav_pending_requests"
            android:icon="@drawable/ic_access_time_blue_grey_500_24dp"
            android:title="@string/menu_pending" />

        <item
            android:id="@+id/nav_add_item_master"
            android:icon="@drawable/ic_add_blue_grey_500_24dp"
            android:title="Add Items" />

        <item
            android:id="@+id/nav_all_item"
            android:icon="@drawable/ic_list_blue_grey_500_24dp"
            android:title="All Items"/>

        <item
            android:id="@+id/nav_add_retailer"
            android:icon="@drawable/ic_group_add_blue_grey_500_24dp"
            android:title="@string/menu_add_retailers" />

        <item
            android:id="@+id/nav_all_retailers"
            android:icon="@drawable/ic_list_blue_grey_500_24dp"
            android:title="@string/menu_all_retailers" />

    </group>

</menu>
